--- a/index.html
+++ b/index.html
@@ -1457,7 +1457,7 @@
     const mapLang = { es:'Español', en:'English', fr:'Français', de:'Deutsch', it:'Italiano' };
     
     // Inicializar Stripe (reemplaza con tu clave pública)
-    const stripe = Stripe('PK_STRIPE_PUBLIC'); // Cambiar por tu clave real
+    const stripe = Stripe('pk_test_51234567890abcdef...'); // Cambiar por tu clave real
     const openModal = () => { $('#previewModal').style.display = 'flex'; document.body.style.overflow='hidden'; };
     const closeModal = () => { $('#previewModal').style.display = 'none'; document.body.style.overflow=''; };
     $('#previewClose').addEventListener('click', closeModal);
@@ -2376,7 +2376,7 @@
       
       try {
         // Crear Payment Intent en el backend (simulado)
-        const response = await fetch('https://admin.delfincheckin.com/api/create-payment-intent', {
+        const response = await fetch('/create-payment-intent', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
