Change volume discount 'Consultar precio' button from WhatsApp to email

--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
             <li>Onboarding personalizado</li>
           </ul>
           <div class="cta">
-            <a class="btn primary" href="https://wa.me/34600000000?text=Consulta%20descuento%20por%20volumen" rel="noopener" target="_blank">Consultar precio</a>
+            <a class="btn primary" href="mailto:ventas@delfincheckin.com?subject=Consulta%20descuento%20por%20volumen&body=Hola,%0D%0A%0D%0AMe%20interesa%20conocer%20más%20sobre%20el%20descuento%20por%20volumen%20para%205%2B%20propiedades.%0D%0A%0D%0A¿Podrían%20enviarme%20información%20sobre:%0D%0A-%20Precios%20especiales%20negociables%0D%0A-%20Funcionalidades%20incluidas%0D%0A-%20Proceso%20de%20implementación%0D%0A%0D%0AGracias.">Consultar precio</a>
             <a class="btn" href="mailto:ventas@ejemplo.com?subject=Consulta%20descuento%20volumen">Hablar con ventas</a>
           </div>
           <p class="note">Contacta para precio personalizado.</p>
