Remove all phone numbers from legal pages (aviso-legal, politica-cookies, politica-privacidad, terminos-servicio)

--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -153,8 +153,7 @@
             <p>Para ejercer tus derechos o resolver dudas sobre cookies:</p>
             <ul>
                 <li><strong>Email:</strong> privacidad@delfincheckin.com</li>
-                <li><strong>Teléfono:</strong> +34 XXX XXX XXX</li>
-                <li><strong>Dirección:</strong> [Dirección de la empresa]</li>
+                <li><strong>Dirección:</strong> Málaga, España</li>
             </ul>
 
             <h2>10. Cambios en esta política</h2>
