Unificar emails de contacto en pÃ¡ginas legales a contacto@delfincheckin.com

--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -41,7 +41,7 @@
             <div class="company-info">
                 <p><strong>Denominación social:</strong> Delfín Check-in<br>
                 <strong>Actividad:</strong> Desarrollo de software y servicios de gestión hotelera<br>
-                <strong>Email:</strong> info@delfincheckin.com<br>
+                <strong>Email:</strong> contacto@delfincheckin.com<br>
                 <strong>Dirección:</strong> Málaga, España<br>
                 <strong>Sitio web:</strong> https://delfincheckin.com</p>
             </div>
@@ -99,7 +99,7 @@
 
             <h2>11. Contacto</h2>
             <p>Para cualquier consulta relacionada con este aviso legal:</p>
-            <p><strong>Email:</strong> legal@delfincheckin.com<br>
+            <p><strong>Email:</strong> contacto@delfincheckin.com<br>
             <strong>Dirección:</strong> Málaga, España</p>
 
             <h2>12. Cumplimiento Normativo</h2>
