--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -152,7 +152,7 @@
             <h2>9. Contacto</h2>
             <p>Para ejercer tus derechos o resolver dudas sobre cookies:</p>
             <ul>
-                <li><strong>Email:</strong> privacidad@delfincheckin.com</li>
+                <li><strong>Email:</strong> contacto@delfincheckin.com</li>
                 <li><strong>Dirección:</strong> Málaga, España</li>
             </ul>
 
