--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -39,7 +39,7 @@
 
             <h2>1. Información del Responsable</h2>
             <p><strong>Delfín Check-in</strong><br>
-            Email: privacidad@delfincheckin.com<br>
+            Email: contacto@delfincheckin.com<br>
             Dirección: Málaga, España</p>
 
             <h2>2. Datos que Recopilamos</h2>
@@ -142,7 +142,7 @@
             <div class="contact-info">
                 <h3>Contacto para Ejercer Derechos</h3>
                 <p>Para ejercer sus derechos o resolver cualquier duda sobre esta política de privacidad, puede contactarnos en:</p>
-                <p><strong>Email:</strong> privacidad@delfincheckin.com<br>
+                <p><strong>Email:</strong> contacto@delfincheckin.com<br>
                 <strong>Dirección:</strong> Málaga, España</p>
                 <p>También puede presentar una reclamación ante la Agencia Española de Protección de Datos (AEPD).</p>
             </div>
