--- a/terminos-servicio.html
+++ b/terminos-servicio.html
@@ -42,7 +42,7 @@
             
             <p><strong>Datos del prestador:</strong><br>
             Delfín Check-in<br>
-            Email: legal@delfincheckin.com<br>
+            Email: contacto@delfincheckin.com<br>
             Dirección: Málaga, España</p>
 
             <h2>2. Aceptación de los Términos</h2>
@@ -155,7 +155,7 @@
 
             <h2>15. Contacto</h2>
             <p>Para cualquier consulta sobre estos términos de servicio:</p>
-            <p><strong>Email:</strong> legal@delfincheckin.com<br>
+            <p><strong>Email:</strong> contacto@delfincheckin.com<br>
             <strong>Dirección:</strong> Málaga, España</p>
 
             <a href="index.html" class="back-link">← Volver a la página principal</a>
