Landing: copy y UX actualizado
- Hero sin dos puntos; sin 'Motor de reservas'
- Checklist: 'Informes y exportación'
- Nota integraciones con tono más suave
- Paso 3: Envío directo al Ministerio sin coste extra
- Eliminado CTA 'Ver planes' bajo datos
- Descuentos: especial desde 3, mejor desde 8 propiedades
- Eliminado aviso amarillo de precios
- Horario ampliado a 9:00-22:00
- Reseña 1 actualizada (check‑in automatizado)

--- a/index.html
+++ b/index.html
@@ -586,14 +586,13 @@
         <span class="badge">Gestión de reservas</span>
         <span class="badge">Panel sencillo</span>
       </div>
-      <h1>Gestiona tu alojamiento sin complicarte: reservas, habitaciones y check‑in online</h1>
+      <h1>Gestiona tu alojamiento sin complicarte, con reservas, habitaciones y check‑in online</h1>
       <p>Centraliza la operativa diaria: asigna habitaciones, recopila documentación antes de la llegada y reduce el tiempo en recepción. Ideal para hoteles, hostales y apartamentos turísticos.</p>
       <div class="hero-card">
         <div class="checklist">
-          <div class="check"><i>✔</i> Motor de reservas y panel de administración.</div>
           <div class="check"><i>✔</i> Check‑in online con verificación de datos.</div>
           <div class="check"><i>✔</i> Gestión de habitaciones, tarifas y disponibilidad.</div>
-          <div class="check"><i>✔</i> Informes básicos y exportación.</div>
+          <div class="check"><i>✔</i> Informes y exportación.</div>
         </div>
       </div>
       <div class="logos">
@@ -776,7 +775,7 @@
         </div>
       </div>
       <div class="note" style="margin-top:12px; padding:12px; background:#f0f9ff; border:1px solid #bae6fd; border-radius:8px;">
-        <strong>Nota sobre integraciones:</strong> Actualmente no hay conexión automática con portales externos. Las reservas de Booking, Airbnb, etc. deben introducirse manualmente en el sistema para gestionar el check-in y registro de viajeros.
+        <strong>Nota sobre integraciones:</strong> Por ahora no conectamos con portales externos. Si trabajas con Booking, Airbnb u otros, puedes introducir las reservas manualmente para gestionar el check‑in y el registro de viajeros.
       </div>
     </section>
 
@@ -852,8 +851,8 @@
           <p class="note">Cuando el huésped lo completa, el <strong>parte de viajero</strong> llega automáticamente a <strong>Delfín Check‑in</strong> y queda guardado.</p>
         </article>
         <article class="card">
-          <h3>Paso 3 · Descargar y enviar al Ministerio</h3>
-          <p class="note">Descarga los <strong>partes de viajero</strong> desde el panel y <strong>envíalos</strong> al <strong>Ministerio del Interior de España</strong> según la normativa.</p>
+          <h3>Paso 3 · Envío directo al Ministerio sin coste extra</h3>
+          <p class="note">El sistema envía automáticamente los <strong>partes de viajero</strong> al <strong>Ministerio del Interior de España</strong> siguiendo la normativa, sin coste adicional.</p>
         </article>
       </div>
     </section>
@@ -870,7 +869,7 @@
         </div>
         <div class="cta" style="margin-top:12px">
           <a class="btn primary" href="#" id="downloadCsvBtn">Descargar ejemplo (CSV)</a>
-          <a class="btn" href="#precio">Ver planes</a>
+          
         </div>
       </div>
     </section>
@@ -1071,8 +1070,9 @@
           <p class="note">Ahorra 8€ al año por propiedad.</p>
         </article>
         <article class="card" itemscope itemtype="https://schema.org/Offer">
-          <h3 itemprop="name">Descuento por volumen</h3>
-          <div class="price"><strong>Desde 5</strong><small>propiedades</small></div>
+          <h3 itemprop="name">Descuentos por volumen</h3>
+          <div class="price"><strong>Especial desde 3</strong><small>propiedades</small></div>
+          <div class="price"><strong>Mejor precio desde 8</strong><small>propiedades</small></div>
           <ul class="features">
             <li>Precio especial negociable</li>
             <li>Gestión centralizada</li>
@@ -1083,12 +1083,10 @@
           <div class="cta">
             <button class="btn primary" onclick="startPayment('volume')" style="width: 100%; padding: 16px; font-size: 18px; font-weight: 700;">Contratar</button>
           </div>
-          <p class="note">Contacta para precio personalizado.</p>
+          <p class="note">Precios especiales desde 3 y 8 propiedades.</p>
         </article>
       </div>
-      <div class="note" style="margin-top:16px; padding:12px; background:#fef3c7; border:1px solid #f59e0b; border-radius:8px; text-align:center;">
-        <strong>Próximo ajuste de precios:</strong> Tras la finalización del workshop SES, los precios subirán a aproximadamente <strong>7€/mes</strong> manteniendo el descuento anual proporcional. <strong>Contrata ahora al precio actual.</strong>
-      </div>
+      
     </section>
 
     <!-- Formulario de Contacto -->
@@ -1135,7 +1133,7 @@
             <div>
               <div style="font-size: 20px; margin-bottom: 8px;">🕒</div>
               <div style="font-weight: 600; color: var(--text); margin-bottom: 4px;">Horario</div>
-              <div style="color: var(--muted); font-size: 14px;">Lun-Vie: 9:00-18:00</div>
+              <div style="color: var(--muted); font-size: 14px;">Lun-Dom: 9:00-22:00</div>
             </div>
           </div>
           <div class="cta" style="margin-top: 20px; justify-content: center;">
@@ -1151,7 +1149,7 @@
       <p class="lead">Hostales y apartamentos que ya confían en Delfín Check-in para su gestión diaria.</p>
       <div class="testimonials">
         <div class="testimonial">
-          <div class="testimonial-text">Desde que uso Delfín Check-in, el registro de viajeros es automático. Antes tardaba 10 minutos por huésped, ahora 2 minutos. Los huéspedes llegan con todo completado.</div>
+          <div class="testimonial-text">Ahora no tengo que hacer el check‑in: está todo automatizado. Antes tardaba más de 10 minutos por huésped; ahora, en 2 minutos está todo hecho y validado. Los huéspedes llegan con la documentación completa y el parte se envía al Ministerio sin complicaciones.</div>
           <div class="testimonial-author">María González</div>
           <div class="testimonial-role">Gerente, Hostal Centro Málaga</div>
         </div>
@@ -1315,7 +1313,7 @@
             <h4 style="margin: 0 0 10px; color: var(--text);">Contacto</h4>
             <p style="margin: 0; color: var(--muted); font-size: 14px;">
               📧 contacto@delfincheckin.com<br>
-              🕒 Lun-Vie: 9:00-18:00
+              🕒 Lun-Dom: 9:00-22:00
             </p>
           </div>
           <div>
