feat(landing): actualizar copy (hero, iCal, volumen, reseña)

--- a/index.html
+++ b/index.html
@@ -587,12 +587,13 @@
         <span class="badge">Panel sencillo</span>
       </div>
       <h1>Gestiona tu alojamiento sin complicarte, con reservas, habitaciones y check‑in online</h1>
-      <p>Centraliza la operativa diaria: asigna habitaciones, recopila documentación antes de la llegada y reduce el tiempo en recepción. Ideal para hoteles, hostales y apartamentos turísticos.</p>
+      <p>Centraliza la operativa diaria: recopila documentación antes de la llegada y reduce el tiempo en recepción. Ideal para hoteles, hostales y apartamentos turísticos.</p>
       <div class="hero-card">
         <div class="checklist">
           <div class="check"><i>✔</i> Check‑in online con verificación de datos.</div>
           <div class="check"><i>✔</i> Gestión de habitaciones, tarifas y disponibilidad.</div>
           <div class="check"><i>✔</i> Informes y exportación.</div>
+          <div class="check"><i>✔</i> Dashboard de reservas.</div>
         </div>
       </div>
       <div class="logos">
@@ -775,7 +776,7 @@
         </div>
       </div>
       <div class="note" style="margin-top:12px; padding:12px; background:#f0f9ff; border:1px solid #bae6fd; border-radius:8px;">
-        <strong>Nota sobre integraciones:</strong> Por ahora no conectamos con portales externos. Si trabajas con Booking, Airbnb u otros, puedes introducir las reservas manualmente para gestionar el check‑in y el registro de viajeros.
+        <strong>Nota sobre integraciones:</strong> Sincronizamos calendarios mediante iCal (importación/exportación) con canales como Booking y Airbnb. Puedes crear reservas manualmente y mantener el calendario actualizado para facilitar el check‑in y el registro de viajeros.
       </div>
     </section>
 
@@ -1073,17 +1074,10 @@
           <h3 itemprop="name">Descuentos por volumen</h3>
           <div class="price"><strong>Especial desde 3</strong><small>propiedades</small></div>
           <div class="price"><strong>Mejor precio desde 8</strong><small>propiedades</small></div>
-          <ul class="features">
-            <li>Precio especial negociable</li>
-            <li>Gestión centralizada</li>
-            <li>Soporte dedicado</li>
-            <li>Facturación unificada</li>
-            <li>Onboarding personalizado</li>
-          </ul>
+          <p class="note" style="margin: 8px 0 16px;">Condiciones detalladas al contactar.</p>
           <div class="cta">
             <button class="btn primary" onclick="startPayment('volume')" style="width: 100%; padding: 16px; font-size: 18px; font-weight: 700;">Contratar</button>
           </div>
-          <p class="note">Precios especiales desde 3 y 8 propiedades.</p>
         </article>
       </div>
       
@@ -1149,7 +1143,7 @@
       <p class="lead">Hostales y apartamentos que ya confían en Delfín Check-in para su gestión diaria.</p>
       <div class="testimonials">
         <div class="testimonial">
-          <div class="testimonial-text">Ahora no tengo que hacer el check‑in: está todo automatizado. Antes tardaba más de 10 minutos por huésped; ahora, en 2 minutos está todo hecho y validado. Los huéspedes llegan con la documentación completa y el parte se envía al Ministerio sin complicaciones.</div>
+          <div class="testimonial-text">Ahora no tengo que hacer el check‑in: está todo automatizado. Antes tardaba más de 10 minutos por huésped; ahora es automático y se envía de manera automática. Los huéspedes llegan con la documentación completa y el parte se envía al Ministerio sin complicaciones.</div>
           <div class="testimonial-author">María González</div>
           <div class="testimonial-role">Gerente, Hostal Centro Málaga</div>
         </div>
