ðŸ’° Actualizar precios a estructura por volumen
- Nueva tabla de precios por volumen con descuentos progresivos
- 1 propiedad: 14,99â‚¬/mes
- 2 propiedades: 26,98â‚¬/mes (10% descuento)
- 4 propiedades: 50,96â‚¬/mes (15% descuento)
- 5-9 propiedades: 59,95â‚¬/mes (20% descuento)
- 10+ propiedades: 112,40â‚¬/mes (25% descuento)
- Calculadora de precios actualizada con nueva lÃ³gica
- Descuento anual adicional del 16,7%
- TÃ©rminos de servicio actualizados

--- a/terminos-servicio.html
+++ b/terminos-servicio.html
@@ -79,9 +79,9 @@
             <h2>5. Precios y Facturación</h2>
             <h3>5.1 Tarifas</h3>
             <ul>
-                <li><strong>Plan Mensual:</strong> 4€ por propiedad/mes</li>
-                <li><strong>Plan Anual:</strong> 40€ por propiedad/año</li>
-                <li><strong>Plan Volumen:</strong> Precio negociable para 5+ propiedades</li>
+                <li><strong>Plan Mensual:</strong> 14,99€ por propiedad/mes</li>
+                <li><strong>Plan Anual:</strong> 149,90€ por propiedad/año (16,7% descuento)</li>
+                <li><strong>Descuentos por Volumen:</strong> Hasta 25% de descuento según número de propiedades</li>
             </ul>
 
             <h3>5.2 Facturación</h3>
