--- a/index.html
+++ b/index.html
@@ -810,10 +810,10 @@
         </div>
 
         <div style="text-align: center; margin-top: 30px;">
-          <a href="#precios" style="display: inline-flex; align-items: center; gap: 10px; background: linear-gradient(135deg, var(--brand), #2bb3ff); color: #0a1020; padding: 15px 30px; border-radius: 12px; font-weight: 700; text-decoration: none; box-shadow: 0 8px 25px rgba(68,192,255,0.3); transition: all 0.3s ease;">
+          <button onclick="openPaymentModal('monthly')" style="display: inline-flex; align-items: center; gap: 10px; background: linear-gradient(135deg, var(--brand), #2bb3ff); color: #0a1020; padding: 15px 30px; border-radius: 12px; font-weight: 700; text-decoration: none; box-shadow: 0 8px 25px rgba(68,192,255,0.3); transition: all 0.3s ease; border: none; cursor: pointer;">
             🚀 Contratar ahora con IA incluida
             <span style="font-size: 16px;">→</span>
-          </a>
+          </button>
         </div>
       </div>
     </section>
