Fix table headers visibility - change to dark text on light background for better readability

--- a/index.html
+++ b/index.html
@@ -989,11 +989,11 @@
         <div style="overflow-x: auto;">
           <table style="width: 100%; border-collapse: collapse; font-size: 16px; background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
             <thead>
-              <tr style="background: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%); color: white;">
-                <th style="padding: 20px 16px; text-align: left; font-weight: 700; font-size: 18px;">N° de propiedades</th>
-                <th style="padding: 20px 16px; text-align: center; font-weight: 700; font-size: 18px;">Descuento</th>
-                <th style="padding: 20px 16px; text-align: center; font-weight: 700; font-size: 18px;">Precio unitario mensual</th>
-                <th style="padding: 20px 16px; text-align: center; font-weight: 700; font-size: 18px;">Total mensual</th>
+              <tr style="background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%); color: #1f2937;">
+                <th style="padding: 20px 16px; text-align: left; font-weight: 700; font-size: 18px; color: #1f2937;">N° de propiedades</th>
+                <th style="padding: 20px 16px; text-align: center; font-weight: 700; font-size: 18px; color: #1f2937;">Descuento</th>
+                <th style="padding: 20px 16px; text-align: center; font-weight: 700; font-size: 18px; color: #1f2937;">Precio unitario mensual</th>
+                <th style="padding: 20px 16px; text-align: center; font-weight: 700; font-size: 18px; color: #1f2937;">Total mensual</th>
               </tr>
             </thead>
             <tbody>
