--- a/index.html
+++ b/index.html
@@ -1557,7 +1557,7 @@
         </div>
         
         <button type="submit" id="submitPayment" style="width: 100%; height: 50px; background: #2563eb; color: white; border: none; border-radius: 8px; font-size: 16px; font-weight: 600; cursor: pointer;" disabled>
-          <span id="buttonText">💳 Pagar con Stripe</span>
+          <span id="buttonText">💳 Contratar</span>
           <span id="spinner" style="display: none;">⏳ Procesando...</span>
         </button>
         
