📧 Add: Información sobre email de onboarding antes del botón contratar
- ✅ Agregar sección informativa sobre el proceso de onboarding
- ✅ Explicar que recibirán email con contraseña temporal
- ✅ Mencionar que deben cambiar la contraseña en el primer acceso
- ✅ Diseño visual atractivo con icono y colores
- ✅ Mejorar experiencia de usuario con expectativas claras

Información incluida:
- Email de onboarding con contraseña temporal
- Acceso a admin.delfincheckin.com
- Obligación de cambiar contraseña por seguridad

--- a/index.html
+++ b/index.html
@@ -1556,6 +1556,19 @@
           </div>
         </div>
         
+        <!-- Información sobre onboarding -->
+        <div style="margin-bottom: 20px; padding: 15px; background: #f0f9ff; border-radius: 8px; border-left: 4px solid #2563eb;">
+          <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+            <span style="font-size: 20px;">📧</span>
+            <h4 style="margin: 0; color: #1e40af; font-size: 16px; font-weight: 600;">¿Qué pasa después?</h4>
+          </div>
+          <p style="margin: 0; font-size: 14px; color: #374151; line-height: 1.5;">
+            Recibirás un <strong>email de onboarding</strong> con una <strong>contraseña temporal</strong> para acceder a tu panel de administración en <strong>admin.delfincheckin.com</strong>. 
+            <br><br>
+            <strong>⚠️ Importante:</strong> Deberás cambiar la contraseña temporal nada más entrar por primera vez por seguridad.
+          </p>
+        </div>
+        
         <button type="submit" id="submitPayment" style="width: 100%; height: 50px; background: #2563eb; color: white; border: none; border-radius: 8px; font-size: 16px; font-weight: 600; cursor: pointer;" disabled>
           <span id="buttonText">💳 Contratar</span>
           <span id="spinner" style="display: none;">⏳ Procesando...</span>
