🐛 Fix: Corregir error JavaScript en formulario de pago
- ✅ Corregir referencia a elemento inexistente paymentName
- ✅ Usar paymentFirstName y paymentLastName correctamente
- ✅ Concatenar nombre y apellidos para enviar al backend
- ✅ Actualizar validación para verificar ambos campos
- ✅ Resolver TypeError: Cannot read properties of null

Error corregido:
- Antes: .value (elemento inexistente)
- Ahora: .value + .value

--- a/index.html
+++ b/index.html
@@ -2496,9 +2496,11 @@ ${message}`;
       const spinner = $('#spinner');
       const properties = parseInt($('#paymentProperties').value) || 1;
       const email = $('#paymentEmail').value;
-      const name = $('#paymentName').value;
+      const firstName = $('#paymentFirstName').value;
+      const lastName = $('#paymentLastName').value;
+      const name = `${firstName} ${lastName}`;
       
-      if (!email || !name) {
+      if (!email || !firstName || !lastName) {
         alert('Por favor, completa todos los campos obligatorios.');
         return;
       }
