🔧 Fix: Corregir parámetro plan por planId en petición a API
- ✅ Cambiar 'plan' por 'planId' en body de la petición
- ✅ Hacer compatible con el endpoint create-payment-intent
- ✅ Resolver error de validación en el backend
- ✅ Mantener separación entre landing page y admin

El backend espera 'planId' pero se enviaba 'plan'.
Ahora la comunicación entre GitHub Pages y Vercel funcionará correctamente.

--- a/index.html
+++ b/index.html
@@ -2524,7 +2524,7 @@ ${message}`;
             'Content-Type': 'application/json',
           },
           body: JSON.stringify({
-            plan: currentPlan,
+            planId: currentPlan,
             properties: properties,
             email: email,
             name: name
