--- a/index.html
+++ b/index.html
@@ -2517,14 +2517,17 @@ ${message}`;
       submitButton.disabled = true;
       
       try {
-        // Crear Payment Intent en el backend (simulado)
+        // Mapear plan de la landing page al planId que espera el backend
+        const planId = currentPlan === 'yearly' ? 'basic_yearly' : 'basic';
+        
+        // Crear Payment Intent en el backend
         const response = await fetch('https://admin.delfincheckin.com/api/create-payment-intent', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
           },
           body: JSON.stringify({
-            planId: currentPlan,
+            planId: planId,
             properties: properties,
             email: email,
             name: name
