--- a/index.html
+++ b/index.html
@@ -2554,12 +2554,9 @@ ${message}`;
         if (error) {
           $('#cardErrors').textContent = error.message;
         } else if (paymentIntent.status === 'succeeded') {
-          // Pago exitoso
-          alert('¡Pago procesado correctamente! Te hemos enviado un email de confirmación.');
-          closePaymentModal();
-          
-          // Redirigir a dashboard o página de éxito
-          window.location.href = '/dashboard?payment=success';
+          // Pago exitoso - Redirigir a página de éxito
+          console.log('✅ Pago exitoso, redirigiendo a página de confirmación');
+          window.location.href = 'success.html';
         }
         
       } catch (error) {
