AÃ±adir preguntas frecuentes sobre IA de Telegram y funcionalidades del sistema

--- a/index.html
+++ b/index.html
@@ -1282,6 +1282,94 @@
           Además, el registro de viajeros se exporta en los formatos requeridos para su notificación oficial.
         </p>
       </details>
+      <details>
+        <summary>¿Cómo funciona la IA de Telegram? 🤖</summary>
+        <p>
+          Nuestro asistente de IA integrado en Telegram responde automáticamente a las consultas de tus huéspedes 24/7. 
+          Puede informar sobre check-in, horarios, servicios, ubicación y resolver dudas comunes sin intervención tuya. 
+          Se entrena con la información específica de tu establecimiento y aprende de cada interacción para mejorar sus respuestas.
+        </p>
+      </details>
+      <details>
+        <summary>¿Qué idiomas soporta el sistema?</summary>
+        <p>
+          El check-in online está disponible en español, inglés, francés, alemán, italiano y portugués. 
+          Los formularios se adaptan automáticamente según la ubicación del huésped o pueden seleccionarse manualmente. 
+          El panel de administración está en español con soporte para múltiples idiomas en desarrollo.
+        </p>
+      </details>
+      <details>
+        <summary>¿Cómo se integra con mi sistema actual?</summary>
+        <p>
+          Delfín Check-in se conecta con los principales PMS (Property Management Systems) y channel managers como Hotelogix, 
+          Little Hotelier, SiteMinder y otros. También ofrecemos APIs para integraciones personalizadas y sincronización 
+          en tiempo real de reservas, precios y disponibilidad.
+        </p>
+      </details>
+      <details>
+        <summary>¿Qué seguridad tienen los datos de mis huéspedes?</summary>
+        <p>
+          Cumplimos con el RGPD y la normativa española de protección de datos. Los datos se almacenan en servidores seguros 
+          en la UE con cifrado de extremo a extremo. Realizamos copias de seguridad diarias y tenemos protocolos de seguridad 
+          que incluyen autenticación de dos factores y monitoreo 24/7.
+        </p>
+      </details>
+      <details>
+        <summary>¿Puedo personalizar el formulario de check-in?</summary>
+        <p>
+          Sí, puedes añadir campos personalizados, modificar el diseño, incluir tu logo y colores corporativos, 
+          y configurar validaciones específicas. También puedes crear diferentes formularios para distintos tipos 
+          de alojamiento o temporadas del año.
+        </p>
+      </details>
+      <details>
+        <summary>¿Cómo funciona la sincronización de calendarios?</summary>
+        <p>
+          Nuestro sistema sincroniza automáticamente con Google Calendar, Outlook y otros calendarios populares. 
+          Las reservas se actualizan en tiempo real, evitando overbookings y permitiendo gestionar tu disponibilidad 
+          desde cualquier dispositivo o plataforma.
+        </p>
+      </details>
+      <details>
+        <summary>¿Qué pasa si no tengo internet? 📶</summary>
+        <p>
+          El sistema funciona offline: los huéspedes pueden completar el check-in sin conexión y los datos se sincronizan 
+          automáticamente cuando se restablece la conexión. Toda la información queda guardada localmente para garantizar 
+          que no se pierda ningún registro.
+        </p>
+      </details>
+      <details>
+        <summary>¿Hay límite en el número de huéspedes o reservas?</summary>
+        <p>
+          No hay límites en el número de huéspedes, reservas o consultas. Nuestros planes se basan en el número de propiedades, 
+          no en el volumen de transacciones. Puedes gestionar desde un pequeño apartamento hasta grandes complejos hoteleros 
+          con la misma funcionalidad.
+        </p>
+      </details>
+      <details>
+        <summary>¿Cómo se notifica automáticamente al Ministerio del Interior?</summary>
+        <p>
+          El sistema genera automáticamente los archivos en el formato oficial requerido por el Ministerio del Interior 
+          y los envía por email o FTP según tu configuración. También puedes descargarlos manualmente y enviarlos 
+          a través de tu canal preferido.
+        </p>
+      </details>
+      <details>
+        <summary>¿Puedo probar el sistema antes de contratar?</summary>
+        <p>
+          Ofrecemos una prueba gratuita de 14 días sin compromiso. Puedes configurar tu primera propiedad, 
+          probar todas las funcionalidades, importar datos de prueba y ver cómo funciona el check-in completo. 
+          No se requiere tarjeta de crédito para empezar.
+        </p>
+      </details>
+      <details>
+        <summary>¿Qué soporte técnico incluye?</summary>
+        <p>
+          Incluimos soporte por email, chat en vivo y videollamadas cuando sea necesario. Nuestro equipo responde 
+          en menos de 2 horas durante horario comercial y tenemos documentación completa, tutoriales en video 
+          y webinars semanales para ayudarte a sacar el máximo partido del sistema.
+        </p>
+      </details>
     </section>
   </main>
 
