--- a/index.html
+++ b/index.html
@@ -825,11 +825,11 @@
       <div class="features-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin: 30px 0;">
         <style>
           .feature-card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.15) !important;
+            transform: translateY(-6px);
+            box-shadow: 0 12px 35px rgba(0,0,0,0.18) !important;
           }
         </style>
-        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #3b82f6; transition: transform 0.2s ease;">
+        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #3b82f6; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
           <div style="display: flex; align-items: center; margin-bottom: 12px;">
             <div style="background: #3b82f6; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">1</div>
             <h3 style="margin: 0; color: #1e40af; font-size: 18px;">Gestión manual de reservas</h3>
@@ -837,7 +837,7 @@
           <p style="margin: 0; color: #64748b; line-height: 1.5;">Crear nuevas reservas desde "Nueva reserva" en el panel web</p>
         </div>
 
-        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #10b981; transition: transform 0.2s ease;">
+        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #10b981; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
           <div style="display: flex; align-items: center; margin-bottom: 12px;">
             <div style="background: #10b981; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">2</div>
             <h3 style="margin: 0; color: #047857; font-size: 18px;">Gestión de habitaciones</h3>
@@ -845,7 +845,7 @@
           <p style="margin: 0; color: #64748b; line-height: 1.5;">Asignar habitaciones específicas a cada reserva</p>
         </div>
 
-        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #f59e0b; transition: transform 0.2s ease;">
+        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #f59e0b; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
           <div style="display: flex; align-items: center; margin-bottom: 12px;">
             <div style="background: #f59e0b; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">3</div>
             <h3 style="margin: 0; color: #d97706; font-size: 18px;">Pre‑check‑in online</h3>
@@ -853,7 +853,7 @@
           <p style="margin: 0; color: #64748b; line-height: 1.5;">Enviar enlace al huésped para completar datos antes de llegar</p>
         </div>
 
-        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #8b5cf6; transition: transform 0.2s ease;">
+        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #8b5cf6; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
           <div style="display: flex; align-items: center; margin-bottom: 12px;">
             <div style="background: #8b5cf6; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">4</div>
             <h3 style="margin: 0; color: #7c3aed; font-size: 18px;">Sincronización móvil</h3>
@@ -861,7 +861,7 @@
           <p style="margin: 0; color: #64748b; line-height: 1.5;">Las reservas del dashboard se sincronizan con el calendario de tu móvil</p>
         </div>
 
-        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #ef4444; transition: transform 0.2s ease;">
+        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #ef4444; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
           <div style="display: flex; align-items: center; margin-bottom: 12px;">
             <div style="background: #ef4444; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">5</div>
             <h3 style="margin: 0; color: #dc2626; font-size: 18px;">Registro de viajeros</h3>
@@ -869,7 +869,7 @@
           <p style="margin: 0; color: #64748b; line-height: 1.5;">Generación automática de fichas para el Ministerio del Interior</p>
         </div>
 
-        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #06b6d4; transition: transform 0.2s ease;">
+        <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #06b6d4; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
           <div style="display: flex; align-items: center; margin-bottom: 12px;">
             <div style="background: #06b6d4; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">6</div>
             <h3 style="margin: 0; color: #0891b2; font-size: 18px;">Exportación de datos</h3>
